Feat: Creacion de la base de las vistas de servicios/portfolio/contacto + vista home en pausa

--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
         <a href="#" class="logo">Portfolio</a>
         <div class="menuNavbar"></div>
         <ul>
-            <li class="activo"><a href="home">Home</a></li>
-            <li><a href="servicios">Servicios</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
-            <li><a href="contacto">Contacto</a></li>
+            <li class="activo"><a href="#home">Home</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
     </header>
     <section id="home">
         <div class="content">
             <h2>Marcos Garrido</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem maiores mollitia quod saepe, repellat voluptatum incidunt excepturi. Laboriosam eius rerum cum quia similique, aliquam voluptates. Tempore quas incidunt repudiandae perspiciatis!</p>
+            <a href="#" class="btn">Contáctame</a>
         </div>
+        <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
     </section>
     <section id="servicios"></section>
     <section id="portfolio"></section>
