Fix: semi-trasparencia en la navbar y animacion al cambiar vista(header)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
         </div>
         <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
     </section>
-    <section id="servicios"></section>
+    <section id="servicios">
+        <div>
+            
+        </div>
+    </section>
     <section id="portfolio"></section>
     <section id="contacto"></section>
 </body>
