--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
         <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
     </section>
     <section id="servicios">
-        <div>
-            
+        <div class="txtServicios">
+            <h2>Habilidades</h2>
+        </div>
+        <div class="containerCard">
+            <div class="card">
+                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                </div>
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
         </div>
     </section>
     <section id="portfolio"></section>
