Feat: Creacion de las 5 habilidades y sus tarjetas

--- a/index.html
+++ b/index.html
@@ -38,12 +38,64 @@
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+                    <div class="numero">
+                        <h2>85<span>%</span></h2>
+                        <p>Html</p>
+                    </div>
                 </div>
             </div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                    <div class="numero">
+                        <h2>85<span>%</span></h2>
+                        <p>Html</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                    <div class="numero">
+                        <h2>85<span>%</span></h2>
+                        <p>Html</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                    <div class="numero">
+                        <h2>85<span>%</span></h2>
+                        <p>Html</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                    <div class="numero">
+                        <h2>85<span>%</span></h2>
+                        <p>Html</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="portfolio"></section>
