Cambio de color y porcentages en las habilidades

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="containerCard">
             <div class="card">
-                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                <div class="porcentage" style="--clr:#fca504;--num:85;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
@@ -45,54 +45,54 @@
                 </div>
             </div>
             <div class="card">
-                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                <div class="porcentage" style="--clr:#0467fc;--num:80;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>85<span>%</span></h2>
-                        <p>Html</p>
+                        <h2>80<span>%</span></h2>
+                        <p>Css</p>
                     </div>
                 </div>
             </div>
             <div class="card">
-                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                <div class="porcentage" style="--clr:#ebfc04;--num:70;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>85<span>%</span></h2>
-                        <p>Html</p>
+                        <h2>70<span>%</span></h2>
+                        <p>Java Script</p>
                     </div>
                 </div>
             </div>
             <div class="card">
-                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                <div class="porcentage" style="--clr:#8e80df;--num:40;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>85<span>%</span></h2>
-                        <p>Html</p>
+                        <h2>40<span>%</span></h2>
+                        <p>PHP</p>
                     </div>
                 </div>
             </div>
             <div class="card">
-                <div class="porcentage" style="--clr:#04fc43;--num:85;">
+                <div class="porcentage" style="--clr:#04f4fc;--num:65;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>85<span>%</span></h2>
-                        <p>Html</p>
+                        <h2>65<span>%</span></h2>
+                        <p>React</p>
                     </div>
                 </div>
             </div>
