Fix: Ajuste con el texto en la vista servicios

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
     </section>
     <section id="servicios">
-        <div class="txtServicios">
+        <div class="txt">
             <h2>Habilidades</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatem, excepturi fugiat dicta ullam.</p>
         </div>
         <div class="containerCard">
             <div class="card">
