Feat: Creacion de las tarjetas de proyecto (Forma base)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="menuNavbar"></div>
         <ul>
             <li class="activo"><a href="#home">Home</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </header>
@@ -26,13 +26,13 @@
         </div>
         <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
     </section>
-    <section id="servicios">
+    <section id="habilidades">
         <div class="txt">
             <h2>Habilidades</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatem, excepturi fugiat dicta ullam.</p>
         </div>
-        <div class="containerCard">
-            <div class="card">
+        <div class="containerHabilidadCard">
+            <div class="cardHabilidad">
                 <div class="porcentage" style="--clr:#fca504;--num:85;">
                     <div class="punto"></div>
                     <svg>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="cardHabilidad">
                 <div class="porcentage" style="--clr:#0467fc;--num:80;">
                     <div class="punto"></div>
                     <svg>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="cardHabilidad">
                 <div class="porcentage" style="--clr:#ebfc04;--num:70;">
                     <div class="punto"></div>
                     <svg>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="cardHabilidad">
                 <div class="porcentage" style="--clr:#8e80df;--num:40;">
                     <div class="punto"></div>
                     <svg>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="cardHabilidad">
                 <div class="porcentage" style="--clr:#04f4fc;--num:65;">
                     <div class="punto"></div>
                     <svg>
@@ -99,7 +99,19 @@
             </div>
         </div>
     </section>
-    <section id="portfolio"></section>
+    <section id="proyectos">
+        <div class="txt">
+            <h2>Proyectos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatem, excepturi fugiat dicta ullam.</p>
+        </div>
+        <div class="containerProyectoCard">
+            <div class="cardProyecto">
+                <div class="imgBox">
+                    <img src="./img/Game Boy - Google Chrome 17_05_2023 13_29_26.png">
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contacto"></section>
 </body>
 </html>
