Feat: Cambio de los proyectos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem maiores mollitia quod saepe, repellat voluptatum incidunt excepturi. Laboriosam eius rerum cum quia similique, aliquam voluptates. Tempore quas incidunt repudiandae perspiciatis!</p>
             <a href="#" class="btn">Contáctame</a>
         </div>
-        <img src="./img/IMG_20230328_143353.jpg" class="imgPerfil">
+        <img src="./img/IMG_5345.jpg" class="imgPerfil">
     </section>
     <section id="habilidades">
         <div class="txt">
@@ -108,6 +108,45 @@
             <div class="cardProyecto">
                 <div class="imgBox">
                     <img src="./img/Game Boy - Google Chrome 17_05_2023 13_29_26.png">
+                </div>
+                <div class="contenidoTarjetaProyecto">
+                    <div class="detalles">
+                        <h2>Game Boy</h2>
+                        <span>Proyecto uno</span>
+                        <ul class="enlaces">
+                            <li><a href="https://github.com/Marcos1326/Game-Boy"><img src="./img/github.png" class="iconoProyecto"></a></li>
+                            <li><a href="https://marcos1326.github.io/Game-Boy/Index.html"><img src="./img/gameboy.png" class="iconoProyecto"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="cardProyecto">
+                <div class="imgBox">
+                    <img src="./img/TIC TAC TOE - Google Chrome 17_05_2023 15_38_30.png">
+                </div>
+                <div class="contenidoTarjetaProyecto">
+                    <div class="detalles">
+                        <h2>Tic-Tac-Toe</h2>
+                        <span>Proyecto dos</span>
+                        <ul class="enlaces">
+                            <li><a href="https://github.com/Marcos1326/Tic-Tac-Toe"><img src="./img/github.png" class="iconoProyecto"></a></li>
+                            <li><a href="https://marcos1326.github.io/Tic-Tac-Toe/"><img src="./img/tac.png" class="iconoProyecto"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="cardProyecto">
+                <div class="imgBox">
+                    <img src="./img/bbdd.png (1183×668) - Google Chrome 17_05_2023 15_46_23.png">
+                </div>
+                <div class="contenidoTarjetaProyecto">
+                    <div class="detalles">
+                        <h2>Backend + API</h2>
+                        <span>Proyecto tres</span>
+                        <ul class="enlaces">
+                            <li><a href="https://github.com/Marcos1326/Backend-Clinica-Dental"><img src="./img/github.png" class="iconoProyecto"></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
