Finalizado parte del contacto

--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
             </div>
         </div>
     </section>
-    <section id="contacto"></section>
+    <section id="contacto">
+        <div class="perfil">
+            <div class="infoPerfil">
+                <img src="./img/IMG_20230328_143353.jpg">
+                <h2>Marcos Garrido</h2>
+                <p>Full Stack Developer</p>
+                <div class="enlacesPerfil">
+                    <a href="#">GitHub</a>
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Github</a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
