Feat: Responsive max-width 900px

--- a/index.html
+++ b/index.html
@@ -59,41 +59,54 @@
                 </div>
             </div>
             <div class="cardHabilidad">
-                <div class="porcentage" style="--clr:#ebfc04;--num:70;">
+                <div class="porcentage" style="--clr:#ebfc04;--num:60;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>70<span>%</span></h2>
+                        <h2>60<span>%</span></h2>
                         <p>Java Script</p>
                     </div>
                 </div>
             </div>
             <div class="cardHabilidad">
-                <div class="porcentage" style="--clr:#8e80df;--num:40;">
+                <div class="porcentage" style="--clr:#8e80df;--num:30;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>40<span>%</span></h2>
+                        <h2>30<span>%</span></h2>
                         <p>PHP</p>
                     </div>
                 </div>
             </div>
             <div class="cardHabilidad">
-                <div class="porcentage" style="--clr:#04f4fc;--num:65;">
+                <div class="porcentage" style="--clr:#04f4fc;--num:50;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
                     <div class="numero">
-                        <h2>65<span>%</span></h2>
+                        <h2>50<span>%</span></h2>
                         <p>React</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cardHabilidad">
+                <div class="porcentage" style="--clr:#0b4591;--num:60;">
+                    <div class="punto"></div>
+                    <svg>
+                        <circle cx="70" cy="70" r="70"></circle>
+                        <circle cx="70" cy="70" r="70"></circle>
+                    </svg>
+                    <div class="numero">
+                        <h2>60<span>%</span></h2>
+                        <p>Photoshop</p>
                     </div>
                 </div>
             </div>
@@ -165,5 +178,6 @@
             </div>
         </div>
     </section>
+    <script src="./js/index.js"></script>
 </body>
 </html>
