Ajuste en el responsive

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./img/letra-m.png" />
+    <!-- Titulo Pagina -->
     <title>Marcos Garrido</title>
+    <!-- Titulo Pagina -->
+
+    <!-- Enlace al css -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Enlace al css -->
 </head>
 <body>
+    <!-- Inincio Header -->
     <header>
-        <a href="#" class="logo">Portfolio</a>
+        <!-- Logo -->
+        <a href="#home" class="logo">Portfolio</a>
+        <!-- Menu Navbar -->
         <div class="menuNavbar"></div>
         <ul>
             <li class="activo"><a href="#home">Home</a></li>
@@ -18,14 +27,20 @@
             <li><a href="#contacto">Contacto</a></li>
         </ul>
     </header>
+    <!-- Fin Header -->
+
+    <!-- Inicio seccion Home -->
     <section id="home">
         <div class="content">
             <h2>Marcos Garrido</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem maiores mollitia quod saepe, repellat voluptatum incidunt excepturi. Laboriosam eius rerum cum quia similique, aliquam voluptates. Tempore quas incidunt repudiandae perspiciatis!</p>
-            <a href="#" class="btn">Contáctame</a>
+            <a href="#contacto" class="btn">Contáctame</a>
         </div>
         <img src="./img/IMG_5345.jpg" class="imgPerfil">
     </section>
+    <!-- Fin seccion Home -->
+
+    <!-- Inicio seccion Habilidades -->
     <section id="habilidades">
         <div class="txt">
             <h2>Habilidades</h2>
@@ -112,6 +127,9 @@
             </div>
         </div>
     </section>
+    <!-- Fin seccion Habilidades -->
+
+    <!-- Inicio seccion Proyectos -->
     <section id="proyectos">
         <div class="txt">
             <h2>Proyectos</h2>
@@ -164,6 +182,9 @@
             </div>
         </div>
     </section>
+    <!-- Fin seccion Proyectos -->
+
+    <!-- Inicio seccion Contacto -->
     <section id="contacto">
         <div class="perfil">
             <div class="infoPerfil">
@@ -178,6 +199,10 @@
             </div>
         </div>
     </section>
+    <!-- Fin seccion Contactos -->
+
+    <!-- Enlace al js -->
     <script src="./js/index.js"></script>
+    <!-- Enlace al js -->
 </body>
 </html>
