Ajustes en el responsive de movil + cambio del lorem

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home">
         <div class="content">
             <h2>Marcos Garrido</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem maiores mollitia quod saepe, repellat voluptatum incidunt excepturi. Laboriosam eius rerum cum quia similique, aliquam voluptates. Tempore quas incidunt repudiandae perspiciatis!</p>
+            <p>Me llamo Marcos Garrido, tengo 20 años y me entusiasma la programación. Desde que empecé a picar código en el grado medio cada vez me va gustando más y más. Siempre digo que hay un mundo entero para aprender y siempre te encontrarás algo nuevo.</p>
             <a href="#contacto" class="btn">Contáctame</a>
         </div>
         <img src="./img/IMG_5345.jpg" class="imgPerfil">
@@ -44,7 +44,7 @@
     <section id="habilidades">
         <div class="txt">
             <h2>Habilidades</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatem, excepturi fugiat dicta ullam.</p>
+            <p>Habilidades de diseño web y programacion</p>
         </div>
         <div class="containerHabilidadCard">
             <div class="cardHabilidad">
@@ -133,7 +133,7 @@
     <section id="proyectos">
         <div class="txt">
             <h2>Proyectos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi sapiente voluptatem, excepturi fugiat dicta ullam.</p>
+            <p>Aqui podréis encontrar unos cuantos proyectos que he ido realizando.</p>
         </div>
         <div class="containerProyectoCard">
             <div class="cardProyecto">
@@ -192,9 +192,9 @@
                 <h2>Marcos Garrido</h2>
                 <p>Full Stack Developer</p>
                 <div class="enlacesPerfil">
-                    <a href="#">GitHub</a>
-                    <a href="#">LinkedIn</a>
-                    <a href="#">Github</a>
+                    <a href="https://github.com/Marcos1326">GitHub</a>
+                    <a href="https://www.linkedin.com/in/marcosgarridofsd/">LinkedIn</a>
+                    <a href="">Gmail</a>
                 </div>
             </div>
         </div>
