Feat: Añadido la funcion para recargar la pagina de habilidades en el titulo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="habilidades">
         <div class="txt">
             <h2>Habilidades</h2>
-            <p>Habilidades de diseño web y programacion</p>
+            <p>Habilidades de diseño web y programación</p>
         </div>
         <div class="containerHabilidadCard">
             <div class="cardHabilidad">
