Feat: Creacion del modal de redes sociales + enlaces a las redes

--- a/index.html
+++ b/index.html
@@ -194,10 +194,60 @@
                 <div class="enlacesPerfil">
                     <a href="https://github.com/Marcos1326">GitHub</a>
                     <a href="https://www.linkedin.com/in/marcosgarridofsd/">LinkedIn</a>
-                    <a href="">Gmail</a>
+                    <a id="openModalButton">Social</a>
                 </div>
             </div>
         </div>
+        <div id="myModal" class="modal">
+            <div class="modalContent">
+                <span class="close">&times;</span>
+                <h2>Redes sociales</h2>
+                <p>Aqui puedes encontrar mis diferentes redes sociales</p>
+                <div class="gridSocial">
+                    <div class="social">
+                        <ul class="enlacesModal">
+                            <li>
+                                <a href="https://instagram.com/marcosgh03">
+                                    <img src="./img/instagram.png" class="iconoRedes">
+                                </a>
+                                <p>Instagram</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="social">
+                        <ul class="enlacesModal">
+                            <li>
+                                <a href="https://www.tiktok.com/@marcosgh03">
+                                    <img src="./img/tik-tok.png" class="iconoRedes">
+                                </a>
+                                <p>Tik-Tok</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="social">
+                        <ul class="enlacesModal">
+                            <li>
+                                <a href="https://twitter.com/Marcosgh03">
+                                    <img src="./img/gorjeo.png" class="iconoRedes">
+                                </a>
+                                <p>Twitter</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="social">
+                        <ul class="enlacesModal">
+                            <li>
+                                <a href="https://www.twitch.tv/marcosgh132">
+                                    <img src="./img/transmision.png" class="iconoRedes">
+                                </a>
+                                <p>Twitch</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </section>
     <!-- Fin seccion Contactos -->
 
