Fix: arreglo del responsive en movil del modal

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home">
         <div class="content">
             <h2>Marcos Garrido</h2>
-            <p>Me llamo Marcos Garrido, tengo 20 años y me entusiasma la programación. Desde que empecé a picar código en el grado medio cada vez me va gustando más y más. Siempre digo que hay un mundo entero para aprender y siempre te encontrarás algo nuevo.</p>
+            <p>Me llamo Marcos Garrido, tengo 20 años y me entusiasma la programación. Desde que empecé a picar código en el grado medio cada vez me va gustando más y más. Siempre he pensado que hay un mundo entero por descubrir en el cual cada día prodrás aprender algo nuevo.</p>
             <a href="#contacto" class="btn">Contáctame</a>
         </div>
         <img src="./img/IMG_5345.jpg" class="imgPerfil">
