Feat: Comentarios del codigo

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 
     <!-- Inicio seccion Home -->
     <section id="home">
+        <!-- Titulo y descripcion -->
         <div class="content">
             <h2>Marcos Garrido</h2>
-            <p>Me llamo Marcos Garrido, tengo 20 años y me entusiasma la programación. Desde que empecé a picar código en el grado medio cada vez me va gustando más y más. Siempre he pensado que hay un mundo entero por descubrir en el cual cada día prodrás aprender algo nuevo.</p>
+            <p>Me llamo Marcos Garrido, tengo 20 años y me entusiasma la programación, actualmente trabajo de Desarrollador Web. Siempre he pensado que hay un mundo entero por descubrir en el cual cada día prodrás aprender algo nuevo.</p>
+            <!-- Boton contáctame -->
             <a href="#contacto" class="btn">Contáctame</a>
         </div>
         <img src="./img/IMG_5345.jpg" class="imgPerfil">
@@ -42,105 +44,152 @@
 
     <!-- Inicio seccion Habilidades -->
     <section id="habilidades">
+        <!-- Titulo seccion -->
         <div class="txt">
             <h2>Habilidades</h2>
             <p>Habilidades de diseño web y programación</p>
         </div>
+        <!-- Inicio container de las cards de habilidades -->
         <div class="containerHabilidadCard">
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#fca504;--num:85;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>85<span>%</span></h2>
                         <p>Html</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#0467fc;--num:80;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>80<span>%</span></h2>
                         <p>Css</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#ebfc04;--num:50;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>50<span>%</span></h2>
                         <p>Java Script</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#8e80df;--num:30;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>30<span>%</span></h2>
                         <p>PHP</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#04f4fc;--num:40;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>40<span>%</span></h2>
                         <p>React</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
+            <!-- Inicio cards de habilidades -->
             <div class="cardHabilidad">
+                <!-- Porcentaje + color + punto del circulo-->
                 <div class="porcentage" style="--clr:#0b4591;--num:60;">
                     <div class="punto"></div>
                     <svg>
                         <circle cx="70" cy="70" r="70"></circle>
                         <circle cx="70" cy="70" r="70"></circle>
                     </svg>
+
+                    <!-- Texto de la card -->
                     <div class="numero">
                         <h2>60<span>%</span></h2>
                         <p>Photoshop</p>
                     </div>
                 </div>
             </div>
+            <!-- Fin cards de habilidades -->
+
         </div>
+        <!-- Fin container de las cards de habilidades -->
+
     </section>
     <!-- Fin seccion Habilidades -->
 
     <!-- Inicio seccion Proyectos -->
     <section id="proyectos">
+        <!-- Titulo seccion -->
         <div class="txt">
             <h2>Proyectos</h2>
             <p>Aqui podréis encontrar unos cuantos proyectos que he ido realizando.</p>
         </div>
+        
+        <!-- Inicio container de las cards de proyectos -->
         <div class="containerProyectoCard">
+
+            <!-- Inicio card de proyectos -->
             <div class="cardProyecto">
+                <!-- Img de la card -->
                 <div class="imgBox">
                     <img src="./img/Game Boy - Google Chrome 17_05_2023 13_29_26.png">
                 </div>
                 <div class="contenidoTarjetaProyecto">
+                    <!-- Titulo + iconos de la card -->
                     <div class="detalles">
                         <h2>Game Boy</h2>
                         <span>Proyecto uno</span>
@@ -151,11 +200,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Fin cards proyectos -->
+
+            <!-- Inicio card de proyectos -->
             <div class="cardProyecto">
+                <!-- Img de la card -->
                 <div class="imgBox">
                     <img src="./img/TIC TAC TOE - Google Chrome 17_05_2023 15_38_30.png">
                 </div>
                 <div class="contenidoTarjetaProyecto">
+                    <!-- Titulo + iconos de la card -->
                     <div class="detalles">
                         <h2>Tic-Tac-Toe</h2>
                         <span>Proyecto dos</span>
@@ -166,11 +220,16 @@
                     </div>
                 </div>
             </div>
+            <!-- Fin cards proyectos -->
+
+            <!-- Inicio card de proyectos -->
             <div class="cardProyecto">
+                <!-- Img de la card -->
                 <div class="imgBox">
                     <img src="./img/bbdd.png (1183×668) - Google Chrome 17_05_2023 15_46_23.png">
                 </div>
                 <div class="contenidoTarjetaProyecto">
+                    <!-- Titulo + iconos de la card -->
                     <div class="detalles">
                         <h2>Backend + API</h2>
                         <span>Proyecto tres</span>
@@ -180,17 +239,24 @@
                     </div>
                 </div>
             </div>
+            <!-- Fin cards proyectos -->
         </div>
+        <!-- Fin container de las cards de proyectos -->
+
     </section>
     <!-- Fin seccion Proyectos -->
 
     <!-- Inicio seccion Contacto -->
     <section id="contacto">
+        <!-- Titulo seccion -->
+
+        <!-- Inicio perfil -->
         <div class="perfil">
             <div class="infoPerfil">
                 <img src="./img/IMG_20230328_143353.jpg">
                 <h2>Marcos Garrido</h2>
                 <p>Full Stack Developer</p>
+                <!-- Enlaces -->
                 <div class="enlacesPerfil">
                     <a href="https://github.com/Marcos1326">GitHub</a>
                     <a href="https://www.linkedin.com/in/marcosgarridofsd/">LinkedIn</a>
@@ -198,56 +264,78 @@
                 </div>
             </div>
         </div>
+        <!-- Inicio perfil -->
+
+        <!-- Inicio del modal de social -->
         <div id="myModal" class="modal">
+            <!-- Inicio contenido del modal -->
             <div class="modalContent">
+                <!-- Botón de cerrar -->
                 <span class="close">&times;</span>
+                <!-- Titulo -->
                 <h2>Redes sociales</h2>
                 <p>Aqui puedes encontrar mis diferentes redes sociales</p>
+
+                <!-- Inicio contenedor de los enlaces -->
                 <div class="gridSocial">
+                    <!-- Enlaces -->
                     <div class="social">
                         <ul class="enlacesModal">
+                            <!-- Icono enlace -->
                             <li>
                                 <a href="https://instagram.com/marcosgh03">
                                     <img src="./img/instagram.png" class="iconoRedes">
                                 </a>
+                                <!-- Texto enlace -->
                                 <p>Instagram</p>
                             </li>
                         </ul>
                     </div>
+                    <!-- Enlaces -->
                     <div class="social">
                         <ul class="enlacesModal">
+                            <!-- Icono enlace -->
                             <li>
                                 <a href="https://www.tiktok.com/@marcosgh03">
                                     <img src="./img/tik-tok.png" class="iconoRedes">
                                 </a>
+                                <!-- Texto enlace -->
                                 <p>Tik-Tok</p>
                             </li>
                         </ul>
                     </div>
+                    <!-- Enlaces -->
                     <div class="social">
                         <ul class="enlacesModal">
+                            <!-- Icono enlace -->
                             <li>
                                 <a href="https://twitter.com/Marcosgh03">
                                     <img src="./img/gorjeo.png" class="iconoRedes">
                                 </a>
+                                <!-- Texto enlace -->
                                 <p>Twitter</p>
                             </li>
                         </ul>
                     </div>
+                    <!-- Enlaces -->
                     <div class="social">
                         <ul class="enlacesModal">
+                            <!-- Icono enlace -->
                             <li>
                                 <a href="https://www.twitch.tv/marcosgh132">
                                     <img src="./img/transmision.png" class="iconoRedes">
                                 </a>
+                                <!-- Texto enlace -->
                                 <p>Twitch</p>
                             </li>
                         </ul>
                     </div>
                 </div>
+                <!-- Fin contenedor de los enlaces -->
             </div>
+            <!-- Fin contenido del modal -->
         </div>
-        
+        <!-- Fin del modal de social -->
     </section>
     <!-- Fin seccion Contactos -->
 
